Fix nav bar styling on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1485,19 +1485,19 @@ button.close {
   justify-content: center;
 }
 
-ol {
+.timeline ol {
   list-style-type: none;
   list-style-position: outside;
 }
 
-li {
+.timeline li {
   position: relative;
   margin: 0;
   padding-bottom: 1em;
   padding-left: 4em;
 }
 
-li:before {
+.timeline li:before {
   content: '';
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' viewBox='0 0 32 32' focusable='false'%3E%3Ccircle stroke='none' fill='%23E03B3B' cx='16' cy='16' r='10'%3E%3C/circle%3E%3C/svg%3E");
   position: absolute;
@@ -1507,7 +1507,7 @@ li:before {
   width: 15px;
 }
 
-li:after {
+.timeline li:after {
   content: '';
   background-color: #E03B3B;
   position: absolute;
